--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <p>
           This project was coded by
           <a href="https://github.com/tsholo-thuto" target="_blank">Tsholofelo Kgaje</a> and is
-          <a href="https://github.com/tsholo-thuto/weatherThuto" target="_blank"> on GitHub</a> and
-          <a href="https://weatherthuto.netlify.app" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/tsholo-thuto/weatherHomework" target="_blank"> on GitHub</a> and
+          <a href="https://tsholo-weather-homework.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
