Implemented required features

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="current-date"></span>, <span id="weather-condition">moderate rain</span> <br />
+              Humidity: <strong><span id="humidity">87</span>%</strong>, Wind: <strong><span id="wind">7.2</span>km/h</strong>
             </p>
           </div>
           <div class="current-temperature">
